# benchmark-mcp-servers

./: .gitignore  CLAUDE.md  README.md  analyze_extended.py  analyze_results.py  docker-compose.yml  spec.md  test_mcp_servers.py
benchmark/: benchmark.js  consolidate.py  run_benchmark.sh
benchmark/results/20260217_183642/: summary.json
benchmark/results/20260217_183642/go/: k6.json  stats.json
benchmark/results/20260217_183642/java/: k6.json  stats.json
benchmark/results/20260217_183642/nodejs/: k6.json  stats.json
benchmark/results/20260217_183642/python/: k6.json  stats.json
benchmark/results/20260217_183642/rust/: k6.json  stats.json
benchmark/results/20260217_203921/: summary.json
benchmark/results/20260217_203921/go/: k6.json  stats.json
benchmark/results/20260217_203921/java/: k6.json  stats.json
benchmark/results/20260217_203921/nodejs/: k6.json  stats.json
benchmark/results/20260217_203921/python/: k6.json  stats.json
benchmark/results/20260217_213458/: summary.json
benchmark/results/20260218_044502/: summary.json
benchmark/results/20260218_055856/: summary.json
benchmark/results/20260218_071007/: summary.json
benchmark/results/20260219_063815/: summary.json
benchmark/results/20260219_075205/: summary.json
benchmark/results/20260220_074235/: summary.json
go-server/: go.mod  main.go
java-server/: build.gradle
mock-api/: mockserver.json
nodejs-server/: Dockerfile  index.js  package.json
python-server/: Dockerfile  main.py  requirements.txt
rust-server/: Cargo.toml  Dockerfile
rust-server/src/: main.rs
(+63 files in other folders)
