[package]
name = "mcp-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.15", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
